@@ -2,6 +2,7 @@
 [Alexandr Topilski]
 - Validate server commands
 - Commands complex value
+- Hex editor save value
 
 1.9.10 / October 28, 2017
 [Alexandr Topilski]
